exports[`invalid(1): .element { height: 100vh; width: 100vw; } 1`] = `

  1 | .element { height: 100vh; width: 100vw; }

`;

exports[`invalid(1): .element { height: 100vh; width: 100vw; } 2`] = `

Message:
> 1 | .element { height: 100vh; width: 100vw; }
    |                    ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { height: 100dvh; width: 100vw; }

`;

exports[`invalid(1): .element { height: 100vh; width: 100vw; } 3`] = `

Message:
> 1 | .element { height: 100vh; width: 100vw; }
    |                                  ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { height: 100vh; width: 100dvw; }

`;

exports[`invalid(1): .large { height: 100vh; width: 100vw; } 1`] = `

Options:
- unit: 'lvh'

Code:
  1 | .large { height: 100vh; width: 100vw; }

`;

exports[`invalid(1): .large { height: 100vh; width: 100vw; } 2`] = `

Message:
> 1 | .large { height: 100vh; width: 100vw; }
    |                  ^^^^^ Prefer \`100lvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100lvh\`.:
  1 | .large { height: 100lvh; width: 100vw; }

`;

exports[`invalid(1): .large { height: 100vh; width: 100vw; } 3`] = `

Message:
> 1 | .large { height: 100vh; width: 100vw; }
    |                                ^^^^^ Prefer \`100lvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100lvw\`.:
  1 | .large { height: 100vh; width: 100lvw; }

`;

exports[`invalid(1): .small { height: 100vh; width: 100vw; } 1`] = `

Options:
- unit: 'svh'

Code:
  1 | .small { height: 100vh; width: 100vw; }

`;

exports[`invalid(1): .small { height: 100vh; width: 100vw; } 2`] = `

Message:
> 1 | .small { height: 100vh; width: 100vw; }
    |                  ^^^^^ Prefer \`100svh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100svh\`.:
  1 | .small { height: 100svh; width: 100vw; }

`;

exports[`invalid(1): .small { height: 100vh; width: 100vw; } 3`] = `

Message:
> 1 | .small { height: 100vh; width: 100vw; }
    |                                ^^^^^ Prefer \`100svw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100svw\`.:
  1 | .small { height: 100vh; width: 100svw; }

`;

exports[`invalid(10): .element { height: calc(100vh + 0px); max-block-size: clamp(10rem, 100vh, 20rem); } 1`] = `

  1 | .element { height: calc(100vh + 0px); max-block-size: clamp(10rem, 100vh, 20rem); }

`;

exports[`invalid(10): .element { height: calc(100vh + 0px); max-block-size: clamp(10rem, 100vh, 20rem); } 2`] = `

Message:
> 1 | .element { height: calc(100vh + 0px); max-block-size: clamp(10rem, 100vh, 20rem); }
    |                         ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { height: calc(100dvh + 0px); max-block-size: clamp(10rem, 100vh, 20rem); }

`;

exports[`invalid(10): .element { height: calc(100vh + 0px); max-block-size: clamp(10rem, 100vh, 20rem); } 3`] = `

Message:
> 1 | .element { height: calc(100vh + 0px); max-block-size: clamp(10rem, 100vh, 20rem); }
    |                                                                    ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { height: calc(100vh + 0px); max-block-size: clamp(10rem, 100dvh, 20rem); }

`;

exports[`invalid(11): .element { height: 100.00vh; } 1`] = `

  1 | .element { height: 100.00vh; }

`;

exports[`invalid(11): .element { height: 100.00vh; } 2`] = `

Message:
> 1 | .element { height: 100.00vh; }
    |                    ^^^^^^^^ Prefer \`100.00dvh\` over \`100.00vh\`.

Suggestion 1/1: Replace \`100.00vh\` with \`100.00dvh\`.:
  1 | .element { height: 100.00dvh; }

`;

exports[`invalid(12): .element { height: +100vh; } 1`] = `

  1 | .element { height: +100vh; }

`;

exports[`invalid(12): .element { height: +100vh; } 2`] = `

Message:
> 1 | .element { height: +100vh; }
    |                    ^^^^^^ Prefer \`+100dvh\` over \`+100vh\`.

Suggestion 1/1: Replace \`+100vh\` with \`+100dvh\`.:
  1 | .element { height: +100dvh; }

`;

exports[`invalid(13): .element { height: 0100vh; } 1`] = `

  1 | .element { height: 0100vh; }

`;

exports[`invalid(13): .element { height: 0100vh; } 2`] = `

Message:
> 1 | .element { height: 0100vh; }
    |                    ^^^^^^ Prefer \`0100dvh\` over \`0100vh\`.

Suggestion 1/1: Replace \`0100vh\` with \`0100dvh\`.:
  1 | .element { height: 0100dvh; }

`;

exports[`invalid(14): .element { height: 100vh !important; } 1`] = `

  1 | .element { height: 100vh !important; }

`;

exports[`invalid(14): .element { height: 100vh !important; } 2`] = `

Message:
> 1 | .element { height: 100vh !important; }
    |                    ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { height: 100dvh !important; }

`;

exports[`invalid(15): .element { height: 100vh /* keep */; } 1`] = `

  1 | .element { height: 100vh /* keep */; }

`;

exports[`invalid(15): .element { height: 100vh /* keep */; } 2`] = `

Message:
> 1 | .element { height: 100vh /* keep */; }
    |                    ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { height: 100dvh /* keep */; }

`;

exports[`invalid(16): .element { height: /* keep */ 100vh; } 1`] = `

  1 | .element { height: /* keep */ 100vh; }

`;

exports[`invalid(16): .element { height: /* keep */ 100vh; } 2`] = `

Message:
> 1 | .element { height: /* keep */ 100vh; }
    |                               ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { height: /* keep */ 100dvh; }

`;

exports[`invalid(17): .element { height: 100vw; width: 100vh; } 1`] = `

  1 | .element { height: 100vw; width: 100vh; }

`;

exports[`invalid(17): .element { height: 100vw; width: 100vh; } 2`] = `

Message:
> 1 | .element { height: 100vw; width: 100vh; }
    |                    ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { height: 100dvw; width: 100vh; }

`;

exports[`invalid(17): .element { height: 100vw; width: 100vh; } 3`] = `

Message:
> 1 | .element { height: 100vw; width: 100vh; }
    |                                  ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { height: 100vw; width: 100dvh; }

`;

exports[`invalid(18): .element { min-inline-size: min(100vw, 40rem); } 1`] = `

  1 | .element { min-inline-size: min(100vw, 40rem); }

`;

exports[`invalid(18): .element { min-inline-size: min(100vw, 40rem); } 2`] = `

Message:
> 1 | .element { min-inline-size: min(100vw, 40rem); }
    |                                 ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { min-inline-size: min(100dvw, 40rem); }

`;

exports[`invalid(19): @media (width > 0px) { .element { height: 100vh; } } 1`] = `

  1 | @media (width > 0px) { .element { height: 100vh; } }

`;

exports[`invalid(19): @media (width > 0px) { .element { height: 100vh; } } 2`] = `

Message:
> 1 | @media (width > 0px) { .element { height: 100vh; } }
    |                                           ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | @media (width > 0px) { .element { height: 100dvh; } }

`;

exports[`invalid(2): .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; } 1`] = `

  1 | .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; }

`;

exports[`invalid(2): .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; } 2`] = `

Message:
> 1 | .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; }
    |                        ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { min-height: 100dvh; max-height: 100vh; min-width: 100vw; max-width: 100vw; }

`;

exports[`invalid(2): .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; } 3`] = `

Message:
> 1 | .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; }
    |                                           ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { min-height: 100vh; max-height: 100dvh; min-width: 100vw; max-width: 100vw; }

`;

exports[`invalid(2): .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; } 4`] = `

Message:
> 1 | .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; }
    |                                                             ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { min-height: 100vh; max-height: 100vh; min-width: 100dvw; max-width: 100vw; }

`;

exports[`invalid(2): .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; } 5`] = `

Message:
> 1 | .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; }
    |                                                                               ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100dvw; }

`;

exports[`invalid(2): .large { height: 100vh !important; } 1`] = `

Options:
- unit: 'lvh'

Code:
  1 | .large { height: 100vh !important; }

`;

exports[`invalid(2): .large { height: 100vh !important; } 2`] = `

Message:
> 1 | .large { height: 100vh !important; }
    |                  ^^^^^ Prefer \`100lvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100lvh\`.:
  1 | .large { height: 100lvh !important; }

`;

exports[`invalid(2): .small { block-size: 100vh; inline-size: 100vw; } 1`] = `

Options:
- unit: 'svh'

Code:
  1 | .small { block-size: 100vh; inline-size: 100vw; }

`;

exports[`invalid(2): .small { block-size: 100vh; inline-size: 100vw; } 2`] = `

Message:
> 1 | .small { block-size: 100vh; inline-size: 100vw; }
    |                      ^^^^^ Prefer \`100svh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100svh\`.:
  1 | .small { block-size: 100svh; inline-size: 100vw; }

`;

exports[`invalid(2): .small { block-size: 100vh; inline-size: 100vw; } 3`] = `

Message:
> 1 | .small { block-size: 100vh; inline-size: 100vw; }
    |                                          ^^^^^ Prefer \`100svw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100svw\`.:
  1 | .small { block-size: 100vh; inline-size: 100svw; }

`;

exports[`invalid(20): @layer theme { .element { height: 100vh; width: 100vw; } } 1`] = `

  1 | @layer theme { .element { height: 100vh; width: 100vw; } }

`;

exports[`invalid(20): @layer theme { .element { height: 100vh; width: 100vw; } } 2`] = `

Message:
> 1 | @layer theme { .element { height: 100vh; width: 100vw; } }
    |                                   ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | @layer theme { .element { height: 100dvh; width: 100vw; } }

`;

exports[`invalid(20): @layer theme { .element { height: 100vh; width: 100vw; } } 3`] = `

Message:
> 1 | @layer theme { .element { height: 100vh; width: 100vw; } }
    |                                                 ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | @layer theme { .element { height: 100vh; width: 100dvw; } }

`;

exports[`invalid(21): .element { &:hover { height: 100vh; } } 1`] = `

  1 | .element { &:hover { height: 100vh; } }

`;

exports[`invalid(21): .element { &:hover { height: 100vh; } } 2`] = `

Message:
> 1 | .element { &:hover { height: 100vh; } }
    |                              ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { &:hover { height: 100dvh; } }

`;

exports[`invalid(3): .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; } 1`] = `

  1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }

`;

exports[`invalid(3): .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; } 2`] = `

Message:
> 1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }
    |                        ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { block-size: 100dvh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }

`;

exports[`invalid(3): .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; } 3`] = `

Message:
> 1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }
    |                                               ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { block-size: 100vh; min-block-size: 100dvh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }

`;

exports[`invalid(3): .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; } 4`] = `

Message:
> 1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }
    |                                                                      ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100dvh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }

`;

exports[`invalid(3): .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; } 5`] = `

Message:
> 1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }
    |                                                                                          ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100dvw; min-inline-size: 100vw; max-inline-size: 100vw; }

`;

exports[`invalid(3): .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; } 6`] = `

Message:
> 1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }
    |                                                                                                                  ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100dvw; max-inline-size: 100vw; }

`;

exports[`invalid(3): .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; } 7`] = `

Message:
> 1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }
    |                                                                                                                                          ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100dvw; }

`;

exports[`invalid(4): .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); } 1`] = `

  1 | .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); }

`;

exports[`invalid(4): .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); } 2`] = `

Message:
> 1 | .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); }
    |                         ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { height: calc(100dvh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); }

`;

exports[`invalid(4): .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); } 3`] = `

Message:
> 1 | .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); }
    |                                                   ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { height: calc(100vh - 1rem); width: min(100dvw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); }

`;

exports[`invalid(4): .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); } 4`] = `

Message:
> 1 | .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); }
    |                                                                                           ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100dvh /* fill */, 100vh); }

`;

exports[`invalid(4): .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); } 5`] = `

Message:
> 1 | .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); }
    |                                                                                                             ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100dvh); }

`;

exports[`invalid(5): .uppercase { min-height: 100.0VH; WIDTH: 100VW; } 1`] = `

  1 | .uppercase { min-height: 100.0VH; WIDTH: 100VW; }

`;

exports[`invalid(5): .uppercase { min-height: 100.0VH; WIDTH: 100VW; } 2`] = `

Message:
> 1 | .uppercase { min-height: 100.0VH; WIDTH: 100VW; }
    |                          ^^^^^^^ Prefer \`100.0dvh\` over \`100.0VH\`.

Suggestion 1/1: Replace \`100.0VH\` with \`100.0dvh\`.:
  1 | .uppercase { min-height: 100.0dvh; WIDTH: 100VW; }

`;

exports[`invalid(5): .uppercase { min-height: 100.0VH; WIDTH: 100VW; } 3`] = `

Message:
> 1 | .uppercase { min-height: 100.0VH; WIDTH: 100VW; }
    |                                          ^^^^^ Prefer \`100dvw\` over \`100VW\`.

Suggestion 1/1: Replace \`100VW\` with \`100dvw\`.:
  1 | .uppercase { min-height: 100.0VH; WIDTH: 100dvw; }

`;

exports[`invalid(6): .scientific { height: 1e2vh; } 1`] = `

  1 | .scientific { height: 1e2vh; }

`;

exports[`invalid(6): .scientific { height: 1e2vh; } 2`] = `

Message:
> 1 | .scientific { height: 1e2vh; }
    |                       ^^^^^ Prefer \`1e2dvh\` over \`1e2vh\`.

Suggestion 1/1: Replace \`1e2vh\` with \`1e2dvh\`.:
  1 | .scientific { height: 1e2dvh; }

`;

exports[`invalid(7): .fallback { height: 100vh; height: 100dvh; } 1`] = `

  1 | .fallback { height: 100vh; height: 100dvh; }

`;

exports[`invalid(7): .fallback { height: 100vh; height: 100dvh; } 2`] = `

Message:
> 1 | .fallback { height: 100vh; height: 100dvh; }
    |                     ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .fallback { height: 100dvh; height: 100dvh; }

`;

exports[`invalid(8): @supports (height: 100dvh) { .element { height: 100vh; } } 1`] = `

  1 | @supports (height: 100dvh) { .element { height: 100vh; } }

`;

exports[`invalid(8): @supports (height: 100dvh) { .element { height: 100vh; } } 2`] = `

Message:
> 1 | @supports (height: 100dvh) { .element { height: 100vh; } }
    |                                                 ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | @supports (height: 100dvh) { .element { height: 100dvh; } }

`;

exports[`invalid(9): .escaped { w\\idth: 100vh; height: 100v\\68; } 1`] = `

  1 | .escaped { w\\idth: 100vh; height: 100v\\68; }

`;

exports[`invalid(9): .escaped { w\\idth: 100vh; height: 100v\\68; } 2`] = `

Message:
> 1 | .escaped { w\\idth: 100vh; height: 100v\\68; }
    |                    ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .escaped { w\\idth: 100dvh; height: 100v\\68; }

`;

exports[`invalid(9): .escaped { w\\idth: 100vh; height: 100v\\68; } 3`] = `

Message:
> 1 | .escaped { w\\idth: 100vh; height: 100v\\68; }
    |                                   ^^^^^^^ Prefer \`100dvh\` over \`100v\\68\`.

Suggestion 1/1: Replace \`100v\\68\` with \`100dvh\`.:
  1 | .escaped { w\\idth: 100vh; height: 100dvh; }

`;
